--- a/tex/latex/QCYPreamable/QCYPreamable.sty
+++ b/tex/latex/QCYPreamable/QCYPreamable.sty
@@ -62,6 +62,18 @@
 % Labeling
 % 为了造case环境
 \RequirePackage{enumitem}
+\makeatletter
+\providecommand{\setsublabel}[1][theorem]{
+    \let\old@label\label
+    \renewcommand{\label}[1]{%
+        \old@label{sub@##1}%
+        \begingroup
+        \renewcommand{\@currentlabel}{\csname the#1\endcsname~\ref{sub@##1}}%
+        \old@label{##1}%
+        \endgroup
+    }
+}
+\makeatother
 % 支持子图，引用为Figure 1(a)
 \RequirePackage[labelformat=simple]{subcaption}
 \renewcommand*\thesubfigure{(\alph{subfigure})}
@@ -97,14 +109,9 @@
 \fi
 
 \DeclareRobustCommand{\ProofStyle}[2][\square]{
-    \cspreto{#2}{\pushQED{{\hfill\ensuremath{#1}}}}
+    \cspreto{#2}{\pushQED{{\hspace*{\fill}\ensuremath{#1}}}}
     \cspreto{end#2}{\popQED}
 }
-
-% \DeclareRobustCommand{\ProofStyle}[2][\square]{
-%     \cspreto{#2}{\pushQED{\qed}\renewcommand*{\qedsymbol}{\ensuremath{#1}}}
-%     \cspreto{end#2}{\popQED}
-% }
 
 % Environments
 \newtheoremstyle{ModifiedRemark}
@@ -175,6 +182,16 @@
     %     \int_incr:N \l_QCYPreamable_adder_int
     % }
     % \ExplSyntaxOff
+
+    \newlist{thmenum}{enumerate}{2}
+    \setlist[thmenum,1]{
+        label=(\alph*),
+        before=\setsublabel
+    }
+    \setlist[thmenum,2]{
+        label=(\roman*),
+        ref=(\alph{thmenumi}.\roman*)
+    }
 }
 
 % New commands
