sjtuexam v0.2 将试卷依照最新Word模板更新

--- a/tex/latex/SJTUexam/SJTUexam.cls
+++ b/tex/latex/SJTUexam/SJTUexam.cls
@@ -1,6 +1,8 @@
 \NeedsTeXFormat{LaTeX2e}[2015/01/01]
-\ProvidesClass{SJTUexam}[2021/11/11 SJTU Exam class v0.1c]
+\ProvidesClass{SJTUexam}[2023/12/16 SJTU Exam class v0.2]
+% 
 % 注意！目前版本不保证向前兼容。
+% 2023/12/16 v0.2 将试卷依照最新Word模板更新
 
 % Handle options
 \newif\ifanswer
@@ -14,7 +16,7 @@
 
 % Packages
 \RequirePackage{amsmath,amssymb,amsthm}
-\RequirePackage[margin=1in]{geometry}
+\RequirePackage[margin=2cm, includefoot]{geometry}
 \RequirePackage{environ}
 \RequirePackage{titlesec}
 \RequirePackage{mdframed}
@@ -100,52 +102,47 @@
 \RequirePackage{lastpage}
 \RequirePackage{fancyhdr}
 \pagestyle{fancy}
-\fancyfoot[C]{--~ 第 \thepage 页 \quad 共 \pageref{LastPage} 页 ~--}
+\fancyfoot[L]{\testpapertype\quad 总 \pageref{LastPage} 页\quad 第 \thepage 页}
+\fancyfoot[C]{}
 \renewcommand{\headrulewidth}{0pt}
 
 % make title
 \newcommand*{\minwidthbox}[2][3cm]{%
   \underline{\makebox[{\ifdim#1<1.1\width 1.1\width\else#1\fi}][c]{#2}}%
 }
-
 \makeatletter
 \renewcommand{\maketitle}{%
     \ifanswer
-        \title{上海交通大学试卷(答案)}
+        \title{上海交通大学试卷（答案）}
     \else
         \title{上海交通大学试卷}
     \fi
+    \providecommand{\testpapertype}{A卷}
+    \ifx\course\undefined
+        \ClassWarning{SJTUexam}{未定义课程名称\protect\course.\MessageBreak 使用\protect\newcommand{\protect\course}{课程名称}以定义之}
+        \newcommand{\course}{}
+    \fi
+    \ifx\courseterm\undefined
+        \ClassWarning{SJTUexam}{未定义课程时间\protect\courseterm.\MessageBreak 使用\protect\newcommand{\protect\courseterm}{2023 至 2024 学年第 1 学期}以定义之}
+        \newcommand{\courseterm}{20XX 至 20XX 学年第 X 学期}
+    \fi
     \vspace{2pc}
     \begin{center}
-        {\heiti \ziju{0.5} \Huge \@title}
+        {\heiti \zihao{-2} {\ziju{1} \@title}（\testpapertype）}
 
-        {\small \@date}
-
-        \ifx\course\undefined
-            \ClassWarning{exam}{未定义课程名称\protect\course.\MessageBreak 使用\protect\newcommand{\protect\course}{课程名称}以定义之}
-            \newcommand{\course}{}
-        \fi
-        \ifx\location\undefined
-            \ClassWarning{exam}{未定义考试地点\protect\location.\MessageBreak 使用\protect\newcommand{\protect\location}{考试地点}以定义之}
-            \newcommand{\location}{}
-        \fi
-        \ifx\quiztime\undefined
-            \ClassWarning{exam}{未定义考试时间\protect\quiztime.\MessageBreak 使用\protect\newcommand{\protect\quiztime}{考试时间}以定义之}
-            \newcommand{\quiztime}{}
-        \fi
+        {\zihao{-4}（\courseterm）}
 
         {%
-            \large
-            \renewcommand{\arraystretch}{2}
+            \zihao{-4}
+            \renewcommand{\arraystretch}{1.5}
             \ifanswer
                 \begin{tabular}{l}
                     课程名称：\minwidthbox[4cm]{\course} \\
                 \end{tabular}
             \else
                 \begin{tabular}{ll}
-                    \mbox{班级号：\minwidthbox{}} \hspace{0.2cm} \mbox{学号：\minwidthbox{}} & \mbox{姓名：\minwidthbox[3cm]{}} \\
-                    \mbox{考试时间：\minwidthbox[6cm]{\quiztime}} & \mbox{地点：\minwidthbox{\location}} \\
-                    \mbox{课程名称：\minwidthbox[6cm]{\course}} & \mbox{成绩：\minwidthbox{}} \\
+                    \mbox{班级号\minwidthbox[5cm]{}} \hspace{0.2cm} \mbox{学号\minwidthbox{}} & \mbox{姓名\minwidthbox[3cm]{}} \\
+                    \mbox{课程名称\minwidthbox[8.8cm]{\course}} & \mbox{成绩\minwidthbox{}} \\
                 \end{tabular}
                 \vspace{1pc}
             \fi
@@ -165,24 +162,27 @@
 
 \newcommand*{\scoretable}[2][\relax]{{
     \ifanswer\else
-        \large \renewcommand{\arraystretch}{2}
-        \newdimen\mylength
-        \settowidth{\mylength}{我承诺，，我将严}
-        \begin{minipage}{\mylength}
-            \heiti
-            我承诺，我将严 \\
-            格遵守考试纪律。\\
-            \\
-            承诺人：\minwidthbox[1.5cm]{}
-        \end{minipage}
-        \addtolength{\mylength}{-2\mylength}
-        \addtolength{\mylength}{-11pt}
-        \addtolength{\mylength}{1\textwidth}
-        \begin{tabularx}{\mylength}{| >{\heiti}Y *{#2}{|Y} || >{\heiti}Y |}
-            \hline
-            题号 & \ifx#1\relax \myfor{1}{1}{#2}{##1&} \else #1 \fi 合计 \\ \hline
-            得分 & \myfor{1}{1}{#2}{&}     \\ \hline
-        \end{tabularx}
+        \begingroup
+            \renewcommand{\arraystretch}{2}
+            \newdimen\mylength
+            \settowidth{\mylength}{\zihao{-4} 我承诺，，我将严}
+            \begin{minipage}{\mylength}
+                \zihao{-4}\heiti
+                我承诺，我将严 \\
+                格遵守考试纪律。\\
+                \\
+                承诺人：\minwidthbox[1.5cm]{}
+            \end{minipage}
+            \addtolength{\mylength}{-2\mylength}
+            \addtolength{\mylength}{-11pt}
+            \addtolength{\mylength}{1\textwidth}
+            \begin{tabularx}{\mylength}{| >{\zihao{5}}Y *{#2}{|Y} | >{\heiti}Y |}
+                \hline
+                题号 & \ifx#1\relax \myfor{1}{1}{#2}{##1&} \else #1 \fi 合计 \\ \hline
+                得分 & \myfor{1}{1}{#2}{&}     \\ \hline
+                批阅人 & \myfor{1}{1}{#2}{&}     \\ \hline
+            \end{tabularx}
+        \endgroup
     \fi
 }}
 
