--- a/tex/latex/SJTUexam/SJTUexam-example.tex
+++ b/tex/latex/SJTUexam/SJTUexam-example.tex
@@ -4,10 +4,18 @@
 % 其他documentclass选项将传递给article
 
 \begin{document}
+\newcommand{\testpapertype}{A卷}
 \newcommand{\course}{Course}
-\newcommand{\location}{Location}
-\newcommand{\quiztime}{QuizTime}
+\newcommand{\courseterm}{2023 至 2024 学年\ 第 1 学期}
 \maketitle
+\question{题目题目}
+\begin{subquestion}
+	题目题目
+\end{subquestion}
+\begin{subquestion}
+	题目题目
+\end{subquestion}
+\question{题目题目}
 
 \qnewpage
 \scoretable{7}
